Projects/ControllerSDK/SDK_DLL/EventAttach/dhnetsdk.h

/////////////////////////////////日志相关/////////////////////////////////

// 日志查询类型
typedef enum _DH_LOG_QUERY_TYPE
{
	DHLOG_ALL = 0,								// 所有日志
	DHLOG_SYSTEM,								// 系统日志
	DHLOG_CONFIG,								// 配置日志
	DHLOG_STORAGE,								// 存储相关
	DHLOG_ALARM,								// 报警日志
	DHLOG_RECORD,								// 录象相关
	DHLOG_ACCOUNT,								// 帐号相关
	DHLOG_CLEAR,								// 清除日志
	DHLOG_PLAYBACK,								// 回放相关
	DHLOG_MANAGER                               // 前端管理运行相关
} DH_LOG_QUERY_TYPE;
// 时间
typedef struct 
{
	DWORD				dwYear;					// 年
	DWORD				dwMonth;				// 月
	DWORD				dwDay;					// 日
	DWORD				dwHour;					// 时
	DWORD				dwMinute;				// 分
	DWORD				dwSecond;				// 秒
} NET_TIME,*LPNET_TIME;
// 日志信息里的时间定义
typedef struct _DHDEVTIME
{
	DWORD				second		:6;			// 秒	1-60		
	DWORD				minute		:6;			// 分	1-60		
	DWORD				hour		:5;			// 时	1-24		
	DWORD				day			:5;			// 日	1-31		
	DWORD				month		:4;			// 月	1-12		
	DWORD				year		:6;			// 年	2000-2063	
} DHDEVTIME, *LPDHDEVTIME;
// 卡状态
typedef enum tagNET_ACCESSCTLCARD_STATE
{
	NET_ACCESSCTLCARD_STATE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_STATE_NORMAL = 0,             // 正常
	NET_ACCESSCTLCARD_STATE_LOSE   = 0x01,			// 挂失
	NET_ACCESSCTLCARD_STATE_LOGOFF = 0x02,			// 注销
	NET_ACCESSCTLCARD_STATE_FREEZE = 0x04,			// 冻结
}NET_ACCESSCTLCARD_STATE;
// 卡类型
typedef enum tagNET_ACCESSCTLCARD_TYPE
{
	NET_ACCESSCTLCARD_TYPE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_TYPE_GENERAL, 			// 一般卡
	NET_ACCESSCTLCARD_TYPE_VIP,				    // VIP卡
	NET_ACCESSCTLCARD_TYPE_GUEST,				// 来宾卡
	NET_ACCESSCTLCARD_TYPE_PATROL,				// 巡逻卡
	NET_ACCESSCTLCARD_TYPE_BLACKLIST,			// 黑名单卡
	NET_ACCESSCTLCARD_TYPE_CORCE,				// 胁迫卡
	NET_ACCESSCTLCARD_TYPE_MOTHERCARD = 0xff,	// 母卡
}NET_ACCESSCTLCARD_TYPE;
// 开门方式(门禁事件,门禁出入记录,实际的开门方式)
typedef enum tagNET_ACCESS_DOOROPEN_METHOD
{
	NET_ACCESS_DOOROPEN_METHOD_UNKNOWN = 0,
	NET_ACCESS_DOOROPEN_METHOD_PWD_ONLY,		// 密码开锁
	NET_ACCESS_DOOROPEN_METHOD_CARD,			// 刷卡开锁
	NET_ACCESS_DOOROPEN_METHOD_CARD_FIRST,		// 先刷卡后密码开锁
	NET_ACCESS_DOOROPEN_METHOD_PWD_FIRST,		// 先密码后刷卡开锁
	NET_ACCESS_DOOROPEN_METHOD_REMOTE,			// 远程开锁，如通过室内机或者平台对门口机开锁
	NET_ACCESS_DOOROPEN_METHOD_BUTTON,			// 开锁按钮进行开锁
}NET_ACCESS_DOOROPEN_METHOD;
// 门禁事件类型
typedef enum tagNET_ACCESS_CTL_EVENT_TYPE
{
	NET_ACCESS_CTL_EVENT_UNKNOWN = 0,
	NET_ACCESS_CTL_EVENT_ENTRY,					// 进门
	NET_ACCESS_CTL_EVENT_EXIT,					// 出门
}NET_ACCESS_CTL_EVENT_TYPE;
// 门禁事件
typedef struct tagALARM_ACCESS_CTL_EVENT_INFO 
{
	DWORD						dwSize;
	int							nDoor;					// 门通道号
	char						szDoorName[DH_MAX_DOORNAME_LEN];	// 门禁名称
	NET_TIME					stuTime;				// 报警事件发生的时间
	NET_ACCESS_CTL_EVENT_TYPE	emEventType;			// 门禁事件类型
	BOOL						bStatus;				// 刷卡结果，TRUE表示成功，FALSE表示失败
	NET_ACCESSCTLCARD_TYPE		emCardType;					// 卡类型
	NET_ACCESS_DOOROPEN_METHOD	emOpenMethod;			// 开门方式
	char						szCardNo[DH_MAX_CARDNO_LEN];	// 卡号
	char						szPwd[DH_MAX_CARDPWD_LEN];// 密码
}ALARM_ACCESS_CTL_EVENT_INFO;
typedef struct _QUERY_DEVICE_LOG_PARAM
{
	DH_LOG_QUERY_TYPE	emLogType;				// 查询日志类型
	NET_TIME			stuStartTime;			// 查询日志的开始时间
	NET_TIME			stuEndTime;				// 查询日志的结束时间
	int					nStartNum;				// 在时间段中从第几条日志开始查询，开始第一次查询可设为0
	int					nEndNum;				// 一次查询中到第几条日志结束,日志返回条数的最大值为1024
	BYTE                nLogStuType;            // 日志数据结构体类型,0:表示DH_DEVICE_LOG_ITEM；1:表示DH_DEVICE_LOG_ITEM_EX
	BYTE                reserved[3];            // 保留 对齐
	unsigned int        nChannelID;             // 通道号,0:兼容之前表示所有通道号，所以通道号从1开始; 1:第一个通道
	BYTE				bReserved[40];
} QUERY_DEVICE_LOG_PARAM;
///////////////////////////////配置相关定义///////////////////////////////

//-------------------------------设备属性---------------------------------
// 设备信息
typedef struct
{
	BYTE				sSerialNumber[DH_SERIALNO_LEN];	// 序列号
	BYTE				byAlarmInPortNum;		// DVR报警输入个数
	BYTE				byAlarmOutPortNum;		// DVR报警输出个数
	BYTE				byDiskNum;				// DVR硬盘个数
	BYTE				byDVRType;				// DVR类型, 见枚举NET_DEVICE_TYPE
	BYTE				byChanNum;				// DVR通道个数
} NET_DEVICEINFO, *LPNET_DEVICEINFO;
/***********************************************************************
 ** 回调函数定义
 ***********************************************************************/

// 网络连接断开回调函数原形
typedef void (CALLBACK *fDisConnect)(LLONG lLoginID, char *pchDVRIP, LONG nDVRPort, LDWORD dwUser);
// 网络连接恢复回调函数原形
typedef void (CALLBACK *fHaveReConnect)(LLONG lLoginID, char *pchDVRIP, LONG nDVRPort, LDWORD dwUser);
// 消息回调函数原形
typedef BOOL (CALLBACK *fMessCallBack)(LONG lCommand, LLONG lLoginID, char *pBuf, DWORD dwBufLen, char *pchDVRIP, LONG nDVRPort, LDWORD dwUser);
/************************************************************************
 ** 接口定义
 ***********************************************************************/

// SDK初始化
CLIENT_API BOOL CALL_METHOD CLIENT_Init(fDisConnect cbDisConnect, LDWORD dwUser);
// SDK退出清理
CLIENT_API void CALL_METHOD CLIENT_Cleanup();
//------------------------------------------------------------------------

// 设置断线重连成功回调函数，设置后SDK内部断线自动重连
CLIENT_API void CALL_METHOD CLIENT_SetAutoReconnect(fHaveReConnect cbAutoConnect, LDWORD dwUser);
//------------------------------------------------------------------------

// 向设备注册
CLIENT_API LLONG CALL_METHOD CLIENT_Login(char *pchDVRIP, WORD wDVRPort, char *pchUserName, char *pchPassword, LPNET_DEVICEINFO lpDeviceInfo, int *error = 0);
//------------------------------------------------------------------------

// 设置报警回调函数
CLIENT_API void CALL_METHOD CLIENT_SetDVRMessCallBack(fMessCallBack cbMessage,LDWORD dwUser);
// 向设备订阅报警--扩展
CLIENT_API BOOL CALL_METHOD CLIENT_StartListenEx(LLONG lLoginID);
// 查询设备状态
CLIENT_API BOOL CALL_METHOD CLIENT_QueryDevState(LLONG lLoginID, int nType, char *pBuf, int nBufLen, int *pRetLen, int waittime=1000);
// 新配置接口，查询配置信息(以Json格式，具体见配置SDK)
CLIENT_API BOOL CALL_METHOD CLIENT_GetNewDevConfig(LLONG lLoginID, char* szCommand, int nChannelID, char* szOutBuffer, DWORD dwOutBufferSize, int *error, int waittime=500);
// 查询设备当前时间
CLIENT_API BOOL CALL_METHOD CLIENT_QueryDeviceTime(LLONG lLoginID, LPNET_TIME pDeviceTime, int waittime=1000);
// 设置设备当前时间
CLIENT_API BOOL CALL_METHOD CLIENT_SetupDeviceTime(LLONG lLoginID, LPNET_TIME pDeviceTime);